--- a/beamercolorthemegemini.sty
+++ b/beamercolorthemegemini.sty
@@ -5,8 +5,11 @@
 % Definitions
 % ====================
 
-\definecolor{lightgray}{RGB}{245, 246, 250}
-\definecolor{blue}{RGB}{64, 115, 158}
+\definecolor{lightgreen}{RGB}{240, 245, 250}
+\definecolor{lightgray}{RGB}{248, 248, 253}
+\definecolor{blue}{RGB}{35, 80, 120}
+%\definecolor{blue}{RGB}{64, 115, 158}
+\definecolor{darkpurple}{RGB}{135, 80, 120}
 \definecolor{darkblue}{RGB}{39, 60, 117}
 
 % ====================
@@ -30,9 +33,14 @@
 \setbeamercolor{block body}{fg=black,bg=white}
 
 % Alert Block
-\setbeamercolor{block alerted title}{fg=blue,bg=lightgray}
+\setbeamercolor{block alerted title}{fg=blue,bg=lightgreen}
 \setbeamercolor{block alerted separator}{bg=black}
-\setbeamercolor{block alerted body}{fg=black,bg=lightgray}
+\setbeamercolor{block alerted body}{fg=black,bg=lightgreen}
+
+% Example Block
+\setbeamercolor{block example title}{fg=blue,bg=lightgray}
+\setbeamercolor{block example separator}{bg=black}
+\setbeamercolor{block example body}{fg=black,bg=lightgray}
 
 % Heading
 \setbeamercolor{heading}{fg=black}
