--- a/poster.tex
+++ b/poster.tex
@@ -42,8 +42,8 @@
 % Title
 % ====================
 
-\title{Sensitivity of Oceanic Fronts to nonlinearities of equation of
-state investigated using Numerical Experiments}
+\title{Sensitivity of Oceanic Fronts to Nonlinearities of Equation of
+State Investigated Using Numerical Experiments}
 
 \author{Romain Caneill \inst{1} \and Fabien Roquet \inst{1}
   \and Gurvan Madec \inst{2} \and Jonas Nycander \inst{3}}
